# GoInsight

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
.devcontainer/s3/: Dockerfile  entrypoint.sh
.devcontainer/s3/policies/buckets/event/: policy.json
.devcontainer/s3/policies/buckets/product/: policy.json
dockerfiles/: app.Dockerfile
scripts/: init-dev-container.sh
src/: manage.py
src/.fixtures/: dump.json
src/apps/clients/: admin.py  apps.py  forms.py  models.py
src/apps/clients/migrations/: 0001_initial.py
src/apps/events/: admin.py  apps.py  forms.py  models.py
src/apps/events/migrations/: 0001_initial.py
src/apps/products/: admin.py  apps.py  forms.py  models.py  urls_select2.py  validators.py  views.py
src/apps/products/migrations/: 0001_initial.py
src/apps/researches/: admin.py  apps.py  models.py  urls_select2.py  views.py
src/apps/researches/migrations/: 0001_initial.py
src/apps/stores/: admin.py  apps.py  forms.py  models.py
src/apps/stores/migrations/: 0001_initial.py
src/apps/systems/: admin.py  apps.py  models.py
src/apps/systems/migrations/: 0001_initial.py
src/common/db/models/: __init__.py  base.py  signals.py
src/common/db/models/fields/: __init__.py  __init__.pyi
src/common/utils/: __init__.py  string.py
src/conf/: asgi.py  urls.py  wsgi.py
src/conf/app_template/: apps.py-tpl
src/conf/settings/: base.py  dev.py
src/conf/urls/: base.py  dev.py
